--- a/pages/careersubmenu.html
+++ b/pages/careersubmenu.html
@@ -29,7 +29,7 @@
             <div class="nav-item nav-item-brand">
                 <div class="logo"> <img src="../image/logo.png" alt="" srcset=""></div>
             </div>
-            <div class="nav-item Navbar__Link-toggle" onclick="this.parentNode.children[2].classList.toggle('active')">gle">
+            <div class="nav-item Navbar__Link-toggle" onclick="this.parentNode.children[2].c lassList.toggle('active')">
                 <i class="fas fa-bars"></i>
             </div>
             <nav class="nav-menu">
