--- a/pages/about.html
+++ b/pages/about.html
@@ -396,20 +396,20 @@
         <div class="ourvalue-container">
             <div class="ourvalue-container-image">
               <img src="../image/aboutusimage/teamwork.png" alt="" srcset="">
-              <p>Teamwork</p>
+              <p class="imagename">Teamwork</p>
             </div>
             <div class="ourvalue-container-image">
                <img src="../image/aboutusimage/trust.png" alt="" srcset="">
-               <p>Trust</p>
+               <p class="imagename">Trust</p>
             </div>
             <div class="ourvalue-container-image">
            <img src="../image/aboutusimage/passion.png" alt="" srcset="">
-        <p>Passion</p>
+        <p class="imagename">Passion</p>
             </div>
 
             <div class="ourvalue-container-image">
                <img src="../image/aboutusimage/respect.png" alt="" srcset="">
-               <p>Respect</p>
+               <p class="imagename">Respect</p>
         </div>
     </section>
 
