--- a/pages/career.html
+++ b/pages/career.html
@@ -23,7 +23,7 @@
     <header id="nav">
         <div class="nav-bar">
             <div class="nav-item nav-item-brand">
-                <div class="logo"> <img src="../image/logo.png" alt="" srcset=""></div>
+                <div class="logo"> <img src="../image/reflexlogo.png" alt="" srcset=""></div>
             </div>
             <div class="nav-item Navbar__Link-toggle" onclick="this.parentNode.children[2].classList.toggle('active')">
                 <i class="fas fa-bars"></i>
