--- a/pages/careersubmenu.html
+++ b/pages/careersubmenu.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/career.css">
     <link rel="stylesheet" href="../css/product.css">
     <link rel="stylesheet" href="../css/careersub.css">
-    <link rel="stylesheet" href="../css/contact2.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <link rel="stylesheet" href="../mediaqueries/footerme.css">
     <link rel="stylesheet" href="../mediaqueries/contactme.css">
     <link rel="stylesheet" href="../mediaqueries/careersubme.css">
@@ -27,7 +27,7 @@
     <header id="nav">
         <div class="nav-bar">
             <div class="nav-item nav-item-brand">
-                <div class="logo"> <img src="../image/logo.png" alt="" srcset=""></div>
+                <div class="logo"> <img src="../image/reflexlogo.png" alt="" srcset=""></div>
             </div>
             <div class="nav-item Navbar__Link-toggle" onclick="this.parentNode.children[2].classList.toggle('active')">
                 <i class="fas fa-bars"></i>
@@ -54,13 +54,10 @@
     <section id="body">
     <section id="main">
         <div class="vacaneiesnumber">
-            <div class="internshipname">
                 <p>.UI/Ux designer(mid level)</p>
-            </div>
-            <div class="date-seat">
                 <p>01/jan/2022 - 29/jan/2022</p>
                 <p>(4 seat available)</p>
-            </div>
+            
         </div>
     </section>
 
