--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/career.css">
     <link rel="stylesheet" href="../css/careersub.css">
-    <link rel="stylesheet" href="../css/contact2.css">
+    <link rel="stylesheet" href="../css/contact.css">
     <link rel="stylesheet" href="../mediaqueries/footerme.css">
     <link rel="stylesheet" href="../mediaqueries/contactme.css">
     <link rel="stylesheet" href="../mediaqueries/homeme.css">
@@ -24,7 +24,7 @@
     <header id="nav">
         <div class="nav-bar">
             <div class="nav-item nav-item-brand">
-                <div class="logo"> <img src="../image/logo.png" alt="" srcset=""></div>
+                <div class="logo"> <img src="../image/reflexlogo.png" alt="" srcset=""></div>
             </div>
             <div class="nav-item Navbar__Link-toggle" onclick="this.parentNode.children[2].classList.toggle('active')">
                 <i class="fas fa-bars"></i>
