--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/var.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/product.css">
-    <link rel="stylesheet" href="./mediaqueries/navme.css">
+    <link rel="stylesheet" href="../mediaqueries/navme.css">
     <link rel="stylesheet" href="./mediaqueries/homeme.css">
     <link rel="stylesheet" href="./mediaqueries/productme.css">
     <link rel="stylesheet" href="./mediaqueries/footerme.css">
