--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,6 +17,15 @@
     <link rel="stylesheet" href="../mediaqueries/homeme.css">
     <link rel="stylesheet" href="../mediaqueries/productme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/AlertifyJS/1.13.1/alertify.js"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+    <!-- Default theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+    <!-- Semantic UI theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/semantic.min.css"/>
+    <!-- Bootstrap theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/bootstrap.min.css"/>
     <title>contact</title>
 </head>
 
@@ -180,7 +189,7 @@
     <div class="copyright-footer">
         <p>2022 Reflex I.T. Solution Pvt. Ltd. | All Rights Reserved </p>
     </div>
-    <script src="../java/form.js"></script>]
+    <script src="../java/form.js"></script>
 </body>
 
 </html>
